# feedrr

./: .gitignore  CLAUDE.md  Makefile  README.md  feeds.yaml  pyproject.toml
.claude/: architecture.md  error-handling.md  implementation-phases.md  project-overview.md  technical-specs.md
.github/workflows/: build-and-deploy.yml
data/: .gitkeep  feedrr.db
docs/: CONFIGURATION.md  DEVELOPMENT.md  GITHUB_PAGES_FIX.md  GITHUB_PAGES_SETUP.md  LOCAL_TEST_RESULTS.md  PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md
site/: index.html
site/static/css/: style.css
site/static/js/: main.js
src/: __init__.py
src/config/: config.yaml  feeds.yaml
src/feedrr/: cli.py  config.py
src/feedrr/fetcher/: rss.py
src/feedrr/generator/: site.py
src/feedrr/processor/: dedup.py  topics.py
src/feedrr/storage/: db.py  models.py
src/fetcher/: __init__.py
src/generator/: __init__.py
src/processor/: __init__.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: base.html  index.html
tests/: .gitkeep  __init__.py  test_db_operations.py  test_db_topics.py  test_dedup.py  test_fetcher.py  test_models.py  test_topics.py
